// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Private - LN - nota - cuerpo - <Html /> Snapshots - HTML 1`] = `
<div
  class="com-embed --html"
  id="anexo-AHYEKXSUEQIUXZD"
>
  <div
    class="empty"
    style="padding: 20px;background-color:#333;color:white;text-align:center;font-size:2em;"
  >
    sample html block
  </div>
</div>
`;

exports[`Private - LN - nota - cuerpo - <Html /> Snapshots - iframe con class "pym" 1`] = `
<div
  class="com-embed --html"
>
  <div
    class="contenido-externo"
  >
    <div
      class="com-anexo pym"
      id="anexo-AHYEKXSUEQIUXZD-0"
    />
  </div>
</div>
`;

exports[`Private - LN - nota - cuerpo - <Html /> Snapshots - iframe con class "pym" dentro de un bloque HTML 1`] = `
<div
  class="com-embed --html"
>
  <div
    class="test"
  >
    <h3
      class="title"
    >
      iframe dentro de un div
    </h3>
    <div
      class="contenido-externo"
    >
      <div
        class="com-anexo pym"
        id="anexo-AHYEKXSUEQIUXZD-0-3"
      />
    </div>
  </div>
</div>
`;

exports[`Private - LN - nota - cuerpo - <Html /> Snapshots - iframe sin class "pym" 1`] = `
<div
  class="com-embed --html"
  id="anexo-AHYEKXSUEQIUXZD"
>
  <iframe
    frameborder="0"
    height="800"
    scrolling="no"
    src="https://especialess3.lanacion.com.ar/20/03/coronavirus-argentina/#/barras"
    width="100%"
  >
     
  </iframe>
</div>
`;
